--- a/android/3.4/examples/PubnubBatteryUsageTest/res/values/strings.xml
+++ b/android/3.4/examples/PubnubBatteryUsageTest/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="btnUnsubscribeAllText">Unsubscribe All</string>
     <string name="welcome">Welcome to the Pubnub Battery Test App</string>
     <string name="hint">Click Menu and select an action: </string>
-    <string name="option1">Subscribe on Idle</string>
+    <string name="option1">Subscribe</string>
     <string name="option2">Publish</string>
     <string name="option3">History</string>
 
@@ -40,5 +40,7 @@
 
     <string name="title_activity_publish">PublishActivity</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_subscribe">SubscribeActivity</string>
+    <string name="title_activity_history">HistoryActivity</string>
 
 </resources>
